--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,150 +16,165 @@
     <link rel="stylesheet" href="styles/general.css">
     <title>BAKE TIMES</title>
 </head>
+
 <body>
-<div class="bg">
-    <div class="container">
-    <div class="header">
-        <div class="header-left">
-            <a href="index.html" class="logo"><p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p></a>
-        </div>
+    <div class="bg">
+        <div class="container">
+            <div class="header">
+                <div class="header-left">
+                    <a href="index.html" class="logo">
+                        <p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span>
+                        </p>
+                    </a>
+                </div>
 
 
-        <button id="menu-toggle" class="m-btn" aria-label="Open menu" aria-expanded="false" aria-controls="header-nav">☰</button>
+                <button id="menu-toggle" class="m-btn" aria-label="Open menu" aria-expanded="false"
+                    aria-controls="header-nav">☰</button>
 
 
-        <div class="header-middle">
-                <a href="recipes.html">RECIPES</a>
-                <a href="bakingbasics.html">BAKING BASICS</a>
-                <a href="holidays.html">HOLIDAYS</a>
-                <a href="#about">ABOUT US</a>
-                <a href="reviews.html">REVIEWS</a>       
-        </div>
+                <div class="header-middle">
+                    <a href="recipes.html">RECIPES</a>
+                    <a href="bakingbasics.html">BAKING BASICS</a>
+                    <a href="holidays.html">HOLIDAYS</a>
+                    <a href="#about">ABOUT US</a>
+                    <a href="reviews.html">REVIEWS</a>
+                </div>
 
 
-        <div class="header-right">
-                <a href="https://facebook.com" class="fa fa-facebook"></a>
-                <a href="https://twitter.com" class="fa fa-twitter"></a>
-                <a href="https://instagram.com" class="fa fa-instagram"></a>
-        </div>
- 
-    </div>
-    </div>
+                <div class="header-right">
+                    <a href="https://facebook.com" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com" class="fa fa-twitter"></a>
+                    <a href="https://instagram.com" class="fa fa-instagram"></a>
+                </div>
 
-    <div class="container">
-        <div class="hero-section">
-            <div class="hero-image">
-                <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.png" alt="hero image">
             </div>
-            <div class="hero-content">
-                <h1 data-aos="fade-up">Freshly Baked, Just for You</h1>
-                <p data-aos="fade-up" data-aos-delay="100">Hello! We bake cakes and desserts with love, using fresh ingredients and timeless recipes.
-                Each creation is made to bring joy, flavor, and sweetness to your day.</p>
-                <div class="hero-buttons">
-                    <button class="btn js-recipe-button" data-aos="fade-up" data-aos-delay="150">Explore Recipes</button>
-                    <button class="btn cu" data-aos="fade-up" data-aos-delay="200">Contact Us</button>
+        </div>
+
+        <div class="container">
+            <div class="hero-section">
+                <div class="hero-image">
+                    <img class="hero-img" data-aos="fade-up" src="tumbnail-images/hero.png" alt="hero image">
+                </div>
+                <div class="hero-content">
+                    <h1 data-aos="fade-up">Freshly Baked, Just for You</h1>
+                    <p data-aos="fade-up" data-aos-delay="100">Hello! We bake cakes and desserts with love, using fresh
+                        ingredients and timeless recipes.
+                        Each creation is made to bring joy, flavor, and sweetness to your day.</p>
+                    <div class="hero-buttons">
+                        <button class="btn js-recipe-button" data-aos="fade-up" data-aos-delay="150">Explore
+                            Recipes</button>
+                        <button class="btn cu" data-aos="fade-up" data-aos-delay="200">Contact Us</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
     <div class="container">
-    <div class="about-us" id="about">
-        <div class="about-text" data-aos="fade-up" data-aos-delay="0">
-            <h2>About Us</h2>
-            <p>
-            At our bakery, we believe every cake tells a story.
-            With a passion for baking and a love for detail,
-            we create treats that are as delightful to look at as they are to taste.
-            From classic recipes to modern creations,
-            our mission is to bring sweetness and joy to every table.
-            </p>
-        </div>
-
-        <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.png" alt="about-us">
-    </div>
-
-       
-    <div class="about-cards">
-        <div class="ab-cards" data-aos="fade-up" data-aos-delay="0">
-            <h4>Trusted by Customers</h4>
-            <p>We deliver quality and consistency,
-               earning the trust of customers for every special moment.</p>
-        </div>
-
-        <div class="ab-cards" data-aos="fade-up" data-aos-delay="100">
-            <h4>Creative Designs</h4>
-            <p>We craft cakes with unique styles and details,
-               turning every bake into a centerpiece worth celebrating.</p>
-        </div>
-
-        <div class="ab-cards" data-aos="fade-up" data-aos-delay="200">
-            <h4>Made with Passion</h4>
-            <p>Every recipe is baked with dedication and care, 
-               bringing you desserts that truly come from the heart.</p>
-        </div>
-    </div>
-    </div>
-  
-    <div class="container">
-    <div class="featured-recipes">
-        <div class="featured-recipe-title">
-            <div class="fr-title" data-aos="zoom-in-up" data-aos-delay="50">
-                <h2 class="fr-head">Handpicked Delights</h2>
-                <p class="fr-dec">Delicious creations baked fresh to perfection daily.</p>
+        <div class="about-us" id="about">
+            <div class="about-text" data-aos="fade-up" data-aos-delay="0">
+                <h2>About Us</h2>
+                <p>
+                    At our bakery, we believe every cake tells a story.
+                    With a passion for baking and a love for detail,
+                    we create treats that are as delightful to look at as they are to taste.
+                    From classic recipes to modern creations,
+                    our mission is to bring sweetness and joy to every table.
+                </p>
             </div>
-            <button class="btn js-recipe-button rec-btn" style="color: white;" data-aos="zoom-in-up" data-aos-delay="100">See all recipes</button>
+
+            <img class="ab-image" data-aos="fade-up" data-aos-delay="100" src="tumbnail-images/about-us-img.png"
+                alt="about-us">
         </div>
 
-        <div class="featured-recipes-cards">
-         <!--IN JAVA SCRIPT-->  
+
+        <div class="about-cards">
+            <div class="ab-cards" data-aos="fade-up" data-aos-delay="0">
+                <h4>Trusted by Customers</h4>
+                <p>We deliver quality and consistency,
+                    earning the trust of customers for every special moment.</p>
+            </div>
+
+            <div class="ab-cards" data-aos="fade-up" data-aos-delay="100">
+                <h4>Creative Designs</h4>
+                <p>We craft cakes with unique styles and details,
+                    turning every bake into a centerpiece worth celebrating.</p>
+            </div>
+
+            <div class="ab-cards" data-aos="fade-up" data-aos-delay="200">
+                <h4>Made with Passion</h4>
+                <p>Every recipe is baked with dedication and care,
+                    bringing you desserts that truly come from the heart.</p>
+            </div>
         </div>
     </div>
-    </div>  
-    
+
     <div class="container">
-    <div class="subscription-container">
-        <div data-aos="slide-right">
-            <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
-            <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get delightful baking recipes,
-                handy tips, and kitchen inspiration sent directly to your inbox.
-                Discover new ways to make every bake extra special!</p>
-        </div>
-        <div data-aos="slide-left">
-            <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
-                <div>
-                    <input class="input-ne" type="text" placeholder="Name*" required>
-                    <input class="input-ne" type="email" placeholder="Email*" required>
-                    <input type="checkbox" id="checbox"><label for="checbox" style="color: #343E51; font-weight: 400; cursor: pointer;">Receive fresh baking ideas and recipes weekly.</label>
+        <div class="featured-recipes">
+            <div class="featured-recipe-title">
+                <div class="fr-title" data-aos="zoom-in-up" data-aos-delay="50">
+                    <h2 class="fr-head">Handpicked Delights</h2>
+                    <p class="fr-dec">Delicious creations baked fresh to perfection daily.</p>
                 </div>
-                <input class="submit-btn" type="submit" value="Submit">
-            </form>
+                <button class="btn js-recipe-button rec-btn" style="color: white;" data-aos="zoom-in-up"
+                    data-aos-delay="100">See all recipes</button>
+            </div>
+
+            <div class="featured-recipes-cards">
+                <!--IN JAVA SCRIPT-->
+            </div>
         </div>
-    </div>
     </div>
 
     <div class="container">
-    <footer>
-        <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
-        <div>
-            <a href="https://facebook.com" class="fa fa-facebook footer-link"></a>
-            <a href="https://twitter.com" class="fa fa-twitter footer-link"></a>
-            <a href="https://instagram.com" class="fa fa-instagram footer-link"></a>
+        <div class="subscription-container">
+            <div data-aos="slide-right">
+                <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
+                <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get
+                    delightful baking recipes,
+                    handy tips, and kitchen inspiration sent directly to your inbox.
+                    Discover new ways to make every bake extra special!</p>
+            </div>
+            <div data-aos="slide-left">
+                <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
+                    <div>
+                        <input class="input-ne" type="text" placeholder="Name*" required>
+                        <input class="input-ne" type="email" placeholder="Email*" required>
+                        <input type="checkbox" id="checbox"><label for="checbox"
+                            style="color: #343E51; font-weight: 400; cursor: pointer;">Receive fresh baking ideas and
+                            recipes weekly.</label>
+                    </div>
+                    <input class="submit-btn" type="submit" value="Submit">
+                </form>
+            </div>
         </div>
-    </footer>
+    </div>
+
+    <div class="container">
+        <footer>
+            <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
+            <div>
+                <a href="https://facebook.com" class="fa fa-facebook footer-link"></a>
+                <a href="https://twitter.com" class="fa fa-twitter footer-link"></a>
+                <a href="https://instagram.com" class="fa fa-instagram footer-link"></a>
+            </div>
+        </footer>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
-    AOS.init({
-        duration: 700,
-        easing: 'ease-out-cubic',
-        once: true
-    });
+        AOS.init({
+            duration: 700,
+            easing: 'ease-out-cubic',
+            once: true
+        });
     </script>
     <script src="scripts/header.js"></script>
-    <script src="scripts/data/recipe-Collections.js"></script>
-    <script src="scripts/home-Page.js"></script>
+    <!-- Load API integration first to fetch recipes from MongoDB -->
+    <script src="scripts/api-integration.js"></script>
+    <!-- Updated home page script that uses API data -->
+    <script src="scripts/home-Page-api.js"></script>
     <script src="scripts/form-feedback.js"></script>
 </body>
+
 </html>
