feat: Implement Q&A, review, and newsletter subscription features with a new API backend and admin control panel.

--- a/holidays.html
+++ b/holidays.html
@@ -281,7 +281,7 @@
                 Make every holiday bake warm, joyful, and unforgettable!</p>
         </div>
         <div data-aos="slide-left">
-            <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
+            <form id="newsletter-form" action="#" class="subscription-form" method="post">
                 <div>
                     <input class="input-ne" type="text" placeholder="Name*" required>
                     <input class="input-ne" type="email" placeholder="Email*" required>
@@ -317,6 +317,7 @@
     <script src="scripts/api-integration.js"></script>
     <!-- Updated holidays script that uses API data -->
     <script src="scripts/holidays-api.js"></script>
+    <script src="scripts/subscription-api.js"></script>
     <script src="scripts/form-feedback.js"></script>
 </body>
 
