--- a/Admin/Admin-control.html
+++ b/Admin/Admin-control.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Manage Recipes - MongoDB Backend</title>
+  <title>Admin Dashboard - Bake Times</title>
   <link rel="stylesheet" href="../styles/general.css">
   <link rel="stylesheet" href="../styles/header.css">
 
@@ -174,15 +174,132 @@
         grid-template-columns: 1fr;
       }
     }
+
+    /* ---- Reviews Section Styles ---- */
+    .reviews-section {
+      margin-top: 60px;
+      padding-top: 40px;
+      border-top: 2px solid #eee;
+    }
+
+    .header-actions {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 24px;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+
+    .stats {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    .stat-card {
+      background: #f8f9fa;
+      padding: 15px 20px;
+      border-radius: 8px;
+      border-left: 4px solid #667eea;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
+
+    .stat-card h3 {
+      font-size: 14px;
+      color: #666;
+      margin: 0 0 5px 0;
+    }
+
+    .stat-card p {
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      margin: 0;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 4px 10px;
+      border-radius: 999px;
+      font-size: 11px;
+      font-weight: 600;
+    }
+
+    .badge-approved {
+      background: #d4edda;
+      color: #155724;
+    }
+
+    .badge-pending {
+      background: #fff3cd;
+      color: #856404;
+    }
+
+    .badge-featured {
+      background: #cce5ff;
+      color: #004085;
+    }
+
+    .action-buttons {
+      display: flex;
+      gap: 6px;
+      flex-wrap: wrap;
+    }
+
+    .btn-sm {
+      padding: 6px 10px;
+      font-size: 11px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      color: white;
+      transition: opacity 0.2s;
+    }
+
+    .btn-sm:hover {
+      opacity: 0.8;
+    }
+
+    .btn-approve {
+      background: #27ae60;
+    }
+
+    .btn-reject {
+      background: #7f8c8d;
+    }
+
+    .btn-feature {
+      background: #2980b9;
+    }
+
+    .btn-unfeature {
+      background: #16a085;
+    }
+
+    .btn-delete-review {
+      background: #c0392b;
+    }
+
+    .review-text {
+      max-width: 300px;
+      white-space: pre-wrap;
+      font-size: 13px;
+      color: #555;
+    }
+
+    .rating {
+      color: #f1c40f;
+    }
   </style>
 </head>
 
 <body>
 
   <div class="admin-wrapper">
-    <h1>Manage Recipes</h1>
-    <p style="margin:0 0 24px;">Add new recipes to MongoDB database, view all recipes, and delete ones you no longer
-      need.</p>
+    <h1>Admin Dashboard</h1>
+    <p style="margin:0 0 24px;">Manage recipes and user reviews in one place.</p>
 
     <div class="admin-layout">
       <!-- Add form -->
@@ -293,6 +410,141 @@
         </table>
       </div>
     </div>
+
+    <!-- ================= REVIEWS SECTION ================= -->
+    <div class="reviews-section">
+      <div class="header-actions">
+        <div>
+          <h2>Review Management</h2>
+          <p style="color: #666; font-size: 14px;">Manage user reviews and select featured reviews</p>
+        </div>
+        <button id="refresh-reviews" class="admin-btn">Refresh Reviews</button>
+      </div>
+
+      <div class="stats">
+        <div class="stat-card">
+          <h3>Total Reviews</h3>
+          <p id="total-count">0</p>
+        </div>
+        <div class="stat-card">
+          <h3>Approved</h3>
+          <p id="approved-count">0</p>
+        </div>
+        <div class="stat-card">
+          <h3>Pending</h3>
+          <p id="pending-count">0</p>
+        </div>
+        <div class="stat-card">
+          <h3>Featured</h3>
+          <p id="featured-count">0 / 4</p>
+        </div>
+      </div>
+
+      <div id="review-status" style="margin-bottom: 20px; font-weight: 500;"></div>
+
+      <div class="recipe-list" style="overflow-x: auto;">
+        <table id="reviews-table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Rating</th>
+              <th style="width: 300px;">Review</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="reviews-tbody">
+            <tr>
+              <td colspan="7">Loading reviews...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- =================================================== -->
+
+    <!-- ================= SUBSCRIBERS SECTION ================= -->
+    <div class="subscribers-section" style="margin-top: 60px; padding-top: 40px; border-top: 2px solid #eee;">
+      <div class="header-actions">
+        <div>
+          <h2>Newsletter Subscribers</h2>
+          <p style="color: #666; font-size: 14px;">Manage email subscriptions</p>
+        </div>
+        <button id="refresh-subscribers" class="admin-btn">Refresh List</button>
+      </div>
+
+      <div class="stats" style="grid-template-columns: repeat(auto-fit, minmax(200px, 300px));">
+        <div class="stat-card">
+          <h3>Total Subscribers</h3>
+          <p id="sub-total-count">0</p>
+        </div>
+      </div>
+
+      <div id="subscriber-status" style="margin-bottom: 20px; font-weight: 500;"></div>
+
+      <div class="recipe-list" style="overflow-x: auto;">
+        <table id="subscribers-table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Email</th>
+              <th>Name</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="subscribers-tbody">
+            <tr>
+              <td colspan="4">Loading subscribers...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- =================================================== -->
+
+    <!-- ================= Q&A SECTION ================= -->
+    <div class="qa-section" style="margin-top: 60px; padding-top: 40px; border-top: 2px solid #eee;">
+      <div class="header-actions">
+        <div>
+          <h2>Q&A / Inquiries</h2>
+          <p style="color: #666; font-size: 14px;">Manage user questions regarding recipes</p>
+        </div>
+        <button id="refresh-qa" class="admin-btn">Refresh Q&A</button>
+      </div>
+
+      <div class="stats" style="grid-template-columns: repeat(auto-fit, minmax(200px, 300px));">
+        <div class="stat-card">
+          <h3>Total Questions</h3>
+          <p id="qa-total-count">0</p>
+        </div>
+      </div>
+
+      <div id="qa-status" style="margin-bottom: 20px; font-weight: 500;"></div>
+
+      <div class="recipe-list" style="overflow-x: auto;">
+        <table id="qa-table">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Recipe</th>
+              <th>Question</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="qa-tbody">
+            <tr>
+              <td colspan="6">Loading questions...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- =================================================== -->
+
   </div>
 
   <!-- admin logic -->
