--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     Discover new ways to make every bake extra special!</p>
             </div>
             <div data-aos="slide-left">
-                <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
+                <form id="newsletter-form" action="#" class="subscription-form" method="post">
                     <div>
                         <input class="input-ne" type="text" placeholder="Name*" required>
                         <input class="input-ne" type="email" placeholder="Email*" required>
@@ -174,6 +174,7 @@
     <script src="scripts/api-integration.js"></script>
     <!-- Updated home page script that uses API data -->
     <script src="scripts/home-Page-api.js"></script>
+    <script src="scripts/subscription-api.js"></script>
     <script src="scripts/form-feedback.js"></script>
 </body>
 
