Refactor: Add config.js and update API URLs for production

--- a/recipes.html
+++ b/recipes.html
@@ -208,6 +208,7 @@
             once: true
         });
     </script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/header.js"></script>
     <!-- Load API integration first to fetch recipes from MongoDB -->
     <script src="scripts/api-integration.js"></script>
