--- a/reviews.html
+++ b/reviews.html
@@ -472,6 +472,7 @@
             once: true
         });
     </script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/header.js"></script>
     <!-- Reviews API Integration -->
     <script src="scripts/reviews-api.js"></script>
