--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -296,6 +296,7 @@
             once: true
         });
     </script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/header.js"></script>
 </body>
 
