--- a/Admin/Admin-control.html
+++ b/Admin/Admin-control.html
@@ -548,6 +548,7 @@
   </div>
 
   <!-- admin logic -->
+  <script src="../scripts/config.js"></script>
   <script src="scripts/admin-control.js"></script>
 
 </body>
